@@ -1,0 +1,1 @@
+{s(a),s(aa),s(aaa),s(aaaa),s(aaaaa),s(aaaaaa),s(aaaaaaa),s(aaaaaaaa),s(aaaaaaaaa)}
