@@ -1,0 +1,1 @@
+{q(1),q(22),p(2),p(23)}
